add typewrite animation and fix some bug in css

--- a/index.html
+++ b/index.html
@@ -5,27 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <a href="#home" class="logo">MyPortfolio</a>
-      <span id="menu-icon">&#9776;</span>
-      <!--menu icon -->
-
-      <nav class="navbar">
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <div>
+        <a href="#" class="logo">Mustafiz</a>
+      </div>
+      <div class="others">
+        <span id="menu-icon">&#9776;</span>
+        <nav class="navbar">
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <button id="theme-toggle">🌙</button>
+      </div>
     </header>
 
     <main>
       <section id="home" class="hero">
         <div class="hero-text">
-          <h1>Hello, I'm a CSE Student</h1>
+          <h1>Hello, I'm <span class="highlighted-name">Mustafiz</span></h1>
+          <h2>
+            I am a <span id="typewriter"></span><span class="cursor">|</span>
+          </h2>
           <p>I design and build things for the web.</p>
           <div class="social-icons">
             <a
@@ -129,8 +139,6 @@
             <p>A brief description of this project.</p>
             <a href="#" class="cta-button">View Project</a>
           </div>
-
-         
         </div>
       </section>
 
