--- a/index.html
+++ b/index.html
@@ -12,20 +12,17 @@
   </head>
   <body>
     <header>
-      <div>
-        <a href="#" class="logo">Mustafiz</a>
-      </div>
+      <a href="#home" class="logo">Mustafiz</a>
+
       <div class="others">
         <span id="menu-icon">&#9776;</span>
         <nav class="navbar">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+          <a href="#home" style="--i: 1">Home</a>
+          <a href="#about" style="--i: 2">About</a>
+          <a href="#projects" style="--i: 3">Projects</a>
+          <a href="#contact" style="--i: 4">Contact</a>
         </nav>
-        <button id="theme-toggle">🌙</button>
+        <button id="theme-toggle" style="--i: 5">🌙</button>
       </div>
     </header>
 
@@ -43,6 +40,7 @@
               target="_blank"
               class="facebook"
               aria-label="Facebook"
+              style="--i: 6"
             >
               <!-- Facebook SVG -->
               <svg viewBox="0 -1 25 25" fill="currentColor">
@@ -57,6 +55,7 @@
               target="_blank"
               class="linkedin"
               aria-label="LinkedIn"
+              style="--i: 7"
             >
               <!-- LinkedIn SVG -->
               <svg viewBox="-1 0 25 25" fill="currentColor">
@@ -71,6 +70,7 @@
               target="_blank"
               class="github"
               aria-label="GitHub"
+              style="--i: 8"
             >
               <!-- GitHub SVG -->
               <svg viewBox="0 0 24 24" fill="currentColor">
@@ -85,6 +85,7 @@
               target="_blank"
               class="instagram"
               aria-label="Instagram"
+              style="--i: 9"
             >
               <!-- Instagram SVG -->
               <svg viewBox="0 0 24 24" fill="currentColor">
