--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
       <div class="others">
         <span id="menu-icon">&#9776;</span>
         <nav class="navbar">
+          <div class="nav-close">
+            <span id="close-icon"><i class="fas fa-times"></i></span>
+          </div>
           <a href="#home" style="--i: 1">Home</a>
           <a href="#about" style="--i: 2">About</a>
+          <a href="#education" style="--i: 6">Education</a>
+          <a href="#skills" style="--i: 5">Skills</a>
           <a href="#projects" style="--i: 3">Projects</a>
           <a href="#contact" style="--i: 4">Contact</a>
         </nav>
-        <button id="theme-toggle" style="--i: 5">🌙</button>
+        <button id="theme-toggle" style="--i: 7">🌙</button>
       </div>
     </header>
 
