--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
       <a href="#home" class="logo">Mustafiz</a>
 
       <div class="others">
-        <span id="menu-icon">&#9776;</span>
+        <span id="menu-icon" style="--i: 4">&#9776;</span>
         <nav class="navbar">
           <div class="nav-close">
             <span id="close-icon"><i class="fas fa-times"></i></span>
           </div>
           <a href="#home" style="--i: 1">Home</a>
           <a href="#about" style="--i: 2">About</a>
-          <a href="#education" style="--i: 3">Education</a>
-          <a href="#skills" style="--i: 4">Skills</a>
-          <a href="#projects" style="--i: 5">Projects</a>
-          <a href="#contact" style="--i: 6">Contact</a>
+          <a href="#education" style="--i: 2">Education</a>
+          <a href="#skills" style="--i: 3">Skills</a>
+          <a href="#projects" style="--i: 3">Projects</a>
+          <a href="#contact" style="--i: 4">Contact</a>
         </nav>
-        <button id="theme-toggle" style="--i: 7">🌙</button>
+        <button id="theme-toggle" style="--i: 5">🌙</button>
       </div>
     </header>
 
