connect backend with frontend

--- a/index.html
+++ b/index.html
@@ -148,9 +148,7 @@
               <h3 class="title">Secondary School Certificate (SSC)</h3>
               <p class="institution">Chittagong Collegiate School</p>
               <p class="description">
-                Completed SSC with distinction. Developed strong foundation in
-                sciences and mathematics. Active participant in school's
-                computer club.
+                
               </p>
             </div>
           </div>
@@ -273,23 +271,11 @@
       <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-grid">
-          <div class="project">
-            <img src="images/cse-mini-projects.webp" alt="Project 1" />
-            <h3>Project 1</h3>
-            <p>A brief description of this project.</p>
-            <a href="#" class="cta-button">View Project</a>
-          </div>
-          <div class="project">
-            <img src="images/cse-mini-projects.webp" alt="Project 2" />
-            <h3>Project 2</h3>
-            <p>A brief description of this project.</p>
-            <a href="#" class="cta-button">View Project</a>
-          </div>
-          <div class="project">
-            <img src="images/cse-mini-projects.webp" alt="Project 1" />
-            <h3>Project 3</h3>
-            <p>A brief description of this project.</p>
-            <a href="#" class="cta-button">View Project</a>
+          <div
+            class="loading"
+            style="display: flex; align-items: center; justify-content: center"
+          >
+            loading project...
           </div>
         </div>
       </section>
