improving the website design and updating email functionality

--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
         </div>
 
         <div class="hero-image">
-          <img src="images/ami2.jpg" alt="My Profile Photo" />
+          <img src="images/rsz_ami2.jpg" alt="My Profile Photo" />
         </div>
       </section>
       <!-- About Section -->
       <section id="about" class="about">
         <div class="about-img">
-          <img src="images/about.jpg" alt="About Picture" />
+          <img src="images/about.png" alt="About Picture" />
         </div>
         <div class="about-text">
           <h2>A Little Bit About Me</h2>
@@ -113,45 +113,7 @@
       <section id="education" class="education">
         <h2>My <span class="highlighted-name">Education</span></h2>
         <div class="education-timeline">
-          <div class="education-item">
-            <div class="education-content">
-              <div class="year">2021 - Present</div>
-              <h3 class="title">Bachelor of Science in Computer Science</h3>
-              <p class="institution">
-                Khulna University of Engineering & Technology
-              </p>
-              <p class="description">
-                Currently pursuing a degree in Computer Science with focus on
-                Software Engineering and Web Development. Maintaining a strong
-                academic record with key coursework in Data Structures,
-                Algorithms, and Web Technologies.
-              </p>
-            </div>
-          </div>
-
-          <div class="education-item">
-            <div class="education-content">
-              <div class="year">2019 - 2021</div>
-              <h3 class="title">Higher Secondary Certificate (HSC)</h3>
-              <p class="institution">Notre Dame College,Dhaka</p>
-              <p class="description">
-                Completed HSC with focus on Science and Mathematics. Achieved
-                excellent academic results and participated in various
-                programming competitions.
-              </p>
-            </div>
-          </div>
-
-          <div class="education-item">
-            <div class="education-content">
-              <div class="year">2017 - 2019</div>
-              <h3 class="title">Secondary School Certificate (SSC)</h3>
-              <p class="institution">Chittagong Collegiate School</p>
-              <p class="description">
-                
-              </p>
-            </div>
-          </div>
+          <div class="loading">loading project...</div>
         </div>
       </section>
 
@@ -270,14 +232,7 @@
 
       <section id="projects" class="projects">
         <h2>My Projects</h2>
-        <div class="project-grid">
-          <div
-            class="loading"
-            style="display: flex; align-items: center; justify-content: center"
-          >
-            loading project...
-          </div>
-        </div>
+        <div class="project-grid"></div>
       </section>
 
       <section id="contact" class="contact">
