add download cv button and make some changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               target="_blank"
               class="facebook"
               aria-label="Facebook"
-              style="--i: 6"
+              style="--i: 5"
             >
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -60,7 +60,7 @@
               target="_blank"
               class="linkedin"
               aria-label="LinkedIn"
-              style="--i: 7"
+              style="--i: 6"
             >
               <i class="fab fa-linkedin-in"></i>
             </a>
@@ -70,7 +70,7 @@
               target="_blank"
               class="github"
               aria-label="GitHub"
-              style="--i: 8"
+              style="--i: 7"
             >
               <i class="fab fa-github"></i>
             </a>
@@ -80,20 +80,30 @@
               target="_blank"
               class="instagram"
               aria-label="Instagram"
-              style="--i: 9"
+              style="--i: 8"
             >
               <i class="fab fa-instagram"></i>
             </a>
           </div>
 
-          <a href="#projects" class="cta-button">View My Work</a>
+          <div class="hero-buttons">
+            <a href="#projects" class="cta-button">View My Work</a>
+            <a
+              href="https://drive.google.com/uc?export=download&id=1vGLIyVzm1YdCnANDADXedRjqiGou5k-N"
+              download="Mustafiz_CV.pdf"
+              class="cta-button cv-button"
+              target="_blank"
+            >
+              <i class="fas fa-download"></i> Download CV
+            </a>
+          </div>
         </div>
 
         <div class="hero-image">
           <img src="images/rsz_ami2.jpg" alt="My Profile Photo" />
         </div>
       </section>
-      <!-- About Section -->
+<!-- About Section -->
       <section id="about" class="about">
         <div class="about-img">
           <img src="images/about.png" alt="About Picture" />
@@ -109,14 +119,14 @@
         </div>
       </section>
 
-      <!-- Education Section -->
+<!-- Education -->
       <section id="education" class="education">
         <h2>My <span class="highlighted-name">Education</span></h2>
         <div class="education-timeline">
           <div class="loading">loading project...</div>
         </div>
       </section>
-
+ <!-- Skill      -->
       <section id="skills" class="skills">
         <h2>My <span class="highlighted-name">Skills</span></h2>
         <div class="skills-container">
@@ -229,7 +239,7 @@
           </div>
         </div>
       </section>
-
+<!-- Projects Section -->
       <section id="projects" class="projects">
         <h2>My Projects</h2>
         <div class="project-grid"></div>
